charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsmith
spec:
  type: ClusterIP 
  ports:
    - name: http
      port: 80
  selector:
    app: appsmith
